fix(nav-tabs): lighten border colour
The nav tabs border colour was previously too dark and not consistent
with other component borders. It now uses the @gray-lighter which is the
correct grey to be using for borders.

--- a/overrides/bootstrap/variables.less
+++ b/overrides/bootstrap/variables.less
@@ -406,13 +406,13 @@
 @nav-open-link-hover-color:                 #fff;
 
 //== Tabs
-@nav-tabs-border-color:                     @gray-light;
+@nav-tabs-border-color:                     @gray-lighter;
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
 @nav-tabs-active-link-hover-bg:             @body-bg;
 @nav-tabs-active-link-hover-color:          @gray-darker;
-@nav-tabs-active-link-hover-border-color:   @gray-light;
+@nav-tabs-active-link-hover-border-color:   @gray-lighter;
 
 @nav-tabs-justified-link-border-color:            @gray-light;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
